themes/gophercon/static/css/main.css
/* ... */
/*-- Platinum sponsor styles --*/
main .home-sponsors .platinum {
  text-align: center;
}
main .home-sponsors .platinum a {
  display: inline-block;
    text-align: center;
    width: 19%;
}
/*-- Gold sponsor styles --*/
main .home-sponsors .gold {
  text-align: center;
}
main .home-sponsors .gold a {
  display: inline-block;
    text-align: center;
    width: 20%;
}
/*-- Silver sponsor styles --*/
main .home-sponsors .silver {
  text-align: center;
}
main .home-sponsors .silver a {
  display: inline-block;
	width: 17%;
	text-align:center;
}
/*-- Bronze sponsor styles --*/
main .home-sponsors .bronze {
  text-align: center;
}
main .home-sponsors .bronze a {
  display: inline-block;
	width: 19%;
	text-align:center;
}


/*-------------------- Generic Styles --------------------*/
.generic {
	background: #FFFFFF;
	padding: 60px 30px;
	position: relative;
	z-index: 2;
}

/*-------------------- Sidebar Styles --------------------*/
.sidebar {
	background: #f9f9f9;
}

.sidebar a {
  color: #40657c;
  font-weight: 400;
}

.sidebar img {
  padding-right: 5px;
  width: 20px;
}

/*-------------------- Hotel Styles --------------------*/
.hotels {
  background: #fff;
}
.hotels hr {
	border-color: #CCCCCC;
}

.hotels .btn {
  font-size: 12px;
}

main .hotels .col-md-2 {
    height: 400px;
    padding: 0;
    position: relative;
    width: 20%;
}

main .hotels .embassy {
	background: url("../images/embassy.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
}
main .hotels .hampton {
	background: url("../images/hampton.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
}
main .hotels .hilton {
	background: url("../images/hilton.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
}
main .hotels .homewood {
	background: url("../images/homewood.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
}
main .hotels .curtis {
	background: url("../images/curtis.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
}
main .hotels .col-md-2 section {
	background: none repeat scroll 0 0 rgba(64, 101, 124, 0.9);
    bottom: 0;
    color: #ffffff;
    position: absolute;
    width: 100%;
    padding: 5px 10px;
}
main .hotels .col-md-2 h4 {
	background: none repeat scroll 0 0 rgba(40, 40, 40, 0.8);
	color: #ffffff;
	padding: 10px;
    position: absolute;
    top: -10px;
    text-shadow: 0px 0px 10px rgba(0,0,0,0.8);
}

main .hotels .col-md-2 section p b {
	font-size: 25px;
	color: #ffffff;
}
main .hotels .col-md-2 section p:nth-child(1) {
	color: #f9b575;	 
}
main .hotels .col-md-2 section p:nth-child(n+2) {
	color: #e1e1e1;
}
footer {
    background: #f6f6f6;
    clear: both;
    padding: 50px 25px;
}

.copyright {
  font-size: 14px;
  margin-bottom: 0px;
  padding-top: 15px;
}

.copyright-character , .copyright-character a{
  font-size: 11px;
  margin-top: 5px;
}

#workshop-schedule {
  background: #fff;
  color: #333;
  padding: 25px;
}

/*---------------------------------------- Responsive Styles Start ---------------------------------------- */

/*-- Smallest devices (phones, 320px to 480px) --*/
@media (min-width: 320px) and (max-width: 480px) {
	header .colors .col-md-2 {
		float: left;
		width: 16.6667%;
	}
	header .header-content .col-md-3 {
		display: none;
	}
	header .header-content .col-md-6 img {
		margin: 50px auto 110px;
	}
	header .header-content .col-md-6 section.countdown {
		bottom: -160px;
	}
	header .color-bar {
		height: 155px;
	}
	header .color-bar .mobile-buttons {
		display: block !important;
		padding: 10px 30px;
	}
	header .color-bar .mobile-buttons a {
		margin: 35px 0px 0px 0px;
		width: 45%;
	}
	header .color-bar .mobile-buttons a.btn-orange {
		float: left;
	}
	header .color-bar .mobile-buttons a.btn-blue {
		float: right;
	}
	
	.event-dates .col-md-3 .back-border {
		min-height: 200px;
	}
	
	main .hotels .col-md-2 {
		width: 100%;
		float: left;
		height: 275px;
	}
	main .hotels .embassy {
		background-size: 100%;
		background-position: center;
	}
	main .hotels .hilton {
		background-size: 120%;
	}
	header {
		background-size: 430%;
	}
	header nav ul li {
		float: left;
		padding: 15px 0 30px;
		width: 33.333%;
	}
	header nav .logo-small {
		display: block;
		left: 50%;
		margin: 0 0 0 -100px;
		max-width: 200px;
		position: absolute;
		top: 45px;
	}
	header .header-content .interior-header h1 {
		color: #40657c;
		font-size: 25px;
		font-weight: 400;
		padding: 35px 0 5px;
	}
	header .header-content .interior-header p {
		font-size: 18px;
		line-height: 30px;
		padding: 0 0 10px;
	}
	.sponsor-signUp p {
		font-size: 16px;
		font-weight: 300;
		margin: 0;
		padding: 0;
		text-align: center;
	}
	
	/*-- Sponsors styles --*/
	main .sponsors img.icon {
		width: 50px;
	}
	
	/*-- Diamond sponsors --*/
	main .sponsors .diamond {
		padding: 25px 15px 0px 15px;
	}
	
	/*-- Platinum sponsors --*/
	main .sponsors .platinum a {
		padding: 40px 0 0;
		width: 33.333%;
	}
	
	/*-- Gold sponsors --*/
	main .sponsors .gold { 
		padding-top: 40px;
	}
	main .sponsors .gold a {
		padding: 0px 0px 10px 0px;
		width: 33.333%;
	}
	
	/*-- Silver sponsors --*/
	main .sponsors .silver { 
		padding-top: 40px;
	}
	main .sponsors .silver a {
		padding: 0px 0px 10px 0px;
		width: 33.333%;
	}
	
	/*-- Bronze sponsors --*/
	main .sponsors .bronze { 
		padding-top: 40px;
	}
	main .sponsors .bronze a {
		padding: 0px 0px 10px 0px;
		width: 33.333%;
	}
	
	/*-- Home Sponsor Styles --*/
	main .home-sponsors a {
		padding: 10px 5px;
	}
	main .home-sponsors .col-md-12 {
    	margin-bottom: 0;
		padding: 0px 0px;
	}
	main .home-sponsors .diamond a img {
		max-width: 110px;
	}
	
	body {
		margin: 0;
	}
	footer {
		height: auto;
		position: relative;
	}
	
}
/* ... */

